[gd_scene load_steps=4 format=3 uid="uid://cfhmup4vyxnqd"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_2qp4o"]
[ext_resource type="PackedScene" uid="uid://ofh3sm5241ut" path="res://scenes/runner.tscn" id="3_fylfb"]
[ext_resource type="PackedScene" uid="uid://c5vovraljsr3p" path="res://scenes/beer_chug.tscn" id="5_8wyeq"]

[node name="main" type="Node2D"]
script = ExtResource("1_2qp4o")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="BeerChugTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="Beer Chug" parent="." instance=ExtResource("5_8wyeq")]

[node name="runner" parent="." instance=ExtResource("3_fylfb")]

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="BeerChugTimer" to="." method="_on_beer_chug_timeout"]
